fix scores on tablet horizontal

--- a/client/templates/style/layout.less
+++ b/client/templates/style/layout.less
@@ -59,3 +59,33 @@ footer {
   .sitemap-text;
 
 }
+
+
+/*---------------------------
+  Media Queries
+----------------------------*/
+
+@media all and (min-width: 1200px) {
+
+  .scores {
+
+    background-color: white;
+
+  }
+
+  .score {
+
+    width: 25%;
+    display: inline-block;
+    margin-left: -5px;
+    border-right: 0.1rem solid white;
+
+  }
+
+  .scores li:nth-child(4) {
+    
+    border-right: none;
+
+  }
+
+}
